--- a/src/public/app.css
+++ b/src/public/app.css
@@ -115,6 +115,14 @@ legend {
   margin: 0;
 }
 
+.radio-option.disabled {
+  color: #94a3b8;
+}
+
+.radio-option input:disabled {
+  cursor: not-allowed;
+}
+
 .checkbox-option {
   display: flex;
   align-items: center;
